figue/tests/integration/snapshots/main__integration__subcommand_errors__unknown_subcommand_with_suggestion.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

command.. .. ⨯ MISSING

Run with --help for usage information.
Error: unexpected argument: int. Did you mean 'init'?
   ╭─[ <cli>:1:1 ]
   │
 1 │ int
   │ ─┬─  
   │  ╰─── unexpected argument: int. Did you mean 'init'?
───╯
